Added a workaround for a bug in Qt in 2 monitors + 2 tablets setup

This patch effectively rescales the hiResGlobalPos() when sees it jumps
to insane values.

BUG:276518